# ctap-types

./: CHANGELOG.md  Cargo.toml
.github/workflows/: ci.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: ctap1.rs  ctap2.rs
src/: arbitrary.rs  authenticator.rs  cose.rs  ctap1.rs  ctap2.rs  lib.rs  operation.rs  rpc.rs  sizes.rs  test.rs  webauthn.rs
src/ctap2/: authenticator_config.rs  client_pin.rs  config.rs  credential_management.rs  get_assertion.rs  get_info.rs  large_blobs.rs  make_credential.rs
tests/: bennofs.rs  cose.rs  get_assertion.rs
