[package]
name = "ctap-types"
version = "0.1.2"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "no_std friendly types for FIDO CTAP"
homepage = "https://github.com/solokeys/ctap-types"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3"
cbor-smol = "0.4"
cosey = "0.3"
delog = "0.1"
heapless = { version = "0.7", default-features = false, features = ["serde"] }
heapless-bytes = "0.3"
interchange = "0.2.1"
iso7816 = "0.1"
serde = { version = "1", default-features = false, features = ["derive"] }
serde-byte-array = "0.1.2"
serde-indexed = "0.1"
serde_bytes = { version = "0.11.12", default-features = false }
serde_repr = "0.1"

[dev-dependencies]
ciborium = "0.2.1"
hex = "0.4.3"
itertools = "0.12.0"
quickcheck = "1.0.3"
serde = { version = "1" }

[features]
# enables support for implementing the large-blobs extension, see src/sizes.rs
large-blobs = []

log-all = ["cbor-smol/log-all"]
log-none = []

[patch.crates-io]
# heapless = { git = "https://github.com/nickray/heapless", branch = "bytebuf-0.5.6" }
serde-indexed = { git = "https://github.com/sosthene-nitrokey/serde-indexed.git", rev = "5005d23cb4ee8622e62188ea0f9466146f851f0d" }
