[package]
name = "ctap-types"
version = "0.2.0"
authors = ["Nicolas Stalder <n@stalder.io>", "The Trussed developers"]
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "no_std friendly types for FIDO CTAP"
repository = "https://github.com/trussed-dev/ctap-types"

[dependencies]
bitflags = "1.3"
cbor-smol = "0.4"
cosey = "0.3"
delog = "0.1"
heapless = { version = "0.7", default-features = false, features = ["serde"] }
heapless-bytes = "0.3"
iso7816 = "0.1"
serde = { version = "1", default-features = false, features = ["derive"] }
serde-indexed = "0.1.1"
serde_bytes = { version = "0.11.14", default-features = false }
serde_repr = "0.1"

[dev-dependencies]
serde_test = "1.0.176"

[features]
# enables all fields for ctap2::get_info
get-info-full = []
# enables support for implementing the large-blobs extension, see src/sizes.rs
large-blobs = []

log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []
