[package]
name = "ctap-types-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
iso7816 = "0.1.2"
libfuzzer-sys = "0.4"

[dependencies.ctap-types]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "ctap1"
path = "fuzz_targets/ctap1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ctap2"
path = "fuzz_targets/ctap2.rs"
test = false
doc = false
bench = false
